--- a/HelenOS.config
+++ b/HelenOS.config
@@ -31,6 +31,7 @@
 
 % Platform
 @ "abs32le" abstract 32-bit little endian
+@ "aarch64" AArch64 64-bit
 @ "amd64" AMD64/EM64T 64-bit (PC)
 @ "arm32" ARM 32-bit
 @ "ia32" IA-32 32-bit (PC)
@@ -149,6 +150,10 @@
 ! [PLATFORM=abs32le] KARCH (choice)
 
 % Kernel architecture
+@ "aarch64"
+! [PLATFORM=aarch64] KARCH (choice)
+
+% Kernel architecture
 @ "amd64"
 ! [PLATFORM=amd64] KARCH (choice)
 
@@ -196,6 +201,10 @@
 ! [PLATFORM=abs32le] UARCH (choice)
 
 % User space architecture
+@ "aarch64"
+! [PLATFORM=aarch64] UARCH (choice)
+
+% User space architecture
 @ "amd64"
 ! [PLATFORM=amd64] UARCH (choice)
 
@@ -241,6 +250,10 @@
 % Boot architecture
 @ "abs32le"
 ! [PLATFORM=abs32le] BARCH (choice)
+
+% Boot architecture
+@ "aarch64"
+! [PLATFORM=aarch64] BARCH (choice)
 
 % Boot architecture
 @ "amd64"
@@ -322,7 +335,7 @@
 @ "clang" Clang
 @ "gcc_helenos" GNU C Compiler (experimental HelenOS-specific cross-compiler)
 @ "gcc_native" GNU C Compiler (native)
-! [PLATFORM=mips32|PLATFORM=ppc32|PLATFORM=abs32le|PLATFORM=arm32|PLATFORM=sparc64] COMPILER (choice)
+! [PLATFORM=mips32|PLATFORM=ppc32|PLATFORM=abs32le|PLATFORM=aarch64|PLATFORM=arm32|PLATFORM=sparc64] COMPILER (choice)
 
 
 ## Cross-compiler target for abstract architecture
@@ -349,13 +362,13 @@
 ! [PLATFORM=ia32|PLATFORM=amd64] CONFIG_IOMAP_BITMAP (y)
 
 % IOMAP dummy support
-! [PLATFORM=abs32le|PLATFORM=arm32|PLATFORM=mips32|PLATFORM=ppc32|PLATFORM=sparc32|PLATFORM=sparc64] CONFIG_IOMAP_DUMMY (y)
+! [PLATFORM=abs32le|PLATFORM=aarch64|PLATFORM=arm32|PLATFORM=mips32|PLATFORM=ppc32|PLATFORM=sparc32|PLATFORM=sparc64] CONFIG_IOMAP_DUMMY (y)
 
 % ACPI support
 ! [PLATFORM=ia32|PLATFORM=amd64] CONFIG_ACPI (y)
 
 % Hierarchical page tables support
-! [PLATFORM=abs32le|PLATFORM=ia32|PLATFORM=amd64|PLATFORM=arm32|PLATFORM=mips32|PLATFORM=ppc32|PLATFORM=sparc32] CONFIG_PAGE_PT (y)
+! [PLATFORM=abs32le|PLATFORM=ia32|PLATFORM=amd64|PLATFORM=aarch64|PLATFORM=arm32|PLATFORM=mips32|PLATFORM=ppc32|PLATFORM=sparc32] CONFIG_PAGE_PT (y)
 
 % Page hash table support
 ! [PLATFORM=ia64|PLATFORM=sparc64] CONFIG_PAGE_HT (y)
@@ -379,7 +392,7 @@
 ! [PLATFORM=ia32|PLATFORM=amd64] CONFIG_MULTIBOOT (y)
 
 % FPU support
-! [PLATFORM=ia32|PLATFORM=amd64|PLATFORM=ia64|PLATFORM=ppc32|PLATFORM=sparc64] CONFIG_FPU (y)
+! [PLATFORM=ia32|PLATFORM=amd64|PLATFORM=ia64|PLATFORM=aarch64|PLATFORM=ppc32|PLATFORM=sparc64] CONFIG_FPU (y)
 
 ## ARMv7 made FPU hardware compulsory
 % FPU support
@@ -392,7 +405,7 @@
 ## Kernel features options
 
 % Support for SMP
-! [(PLATFORM=ia32&PROCESSOR!=athlon_xp)|PLATFORM=amd64|PLATFORM=sparc64|PLATFORM=ia64|(PLATFORM=mips32&MACHINE=msim)|PLATFORM=abs32le] CONFIG_SMP (y/n)
+! [(PLATFORM=ia32&PROCESSOR!=athlon_xp)|PLATFORM=amd64|PLATFORM=aarch64|PLATFORM=sparc64|PLATFORM=ia64|(PLATFORM=mips32&MACHINE=msim)|PLATFORM=abs32le] CONFIG_SMP (y/n)
 
 % Debug build
 ! CONFIG_DEBUG (y/n)
@@ -460,7 +473,7 @@
 % Input device class
 @ "generic" Keyboard or serial line
 @ "none" No input device
-! [PLATFORM=ia32|PLATFORM=amd64|PLATFORM=mips32|PLATFORM=ppc32|PLATFORM=sparc64] CONFIG_HID_IN (choice)
+! [PLATFORM=ia32|PLATFORM=amd64|PLATFORM=aarch64|PLATFORM=mips32|PLATFORM=ppc32|PLATFORM=sparc64] CONFIG_HID_IN (choice)
 
 % Input device class
 @ "generic" Keyboard or serial line
@@ -476,7 +489,7 @@
 % Output device class
 @ "generic" Monitor or serial line
 @ "none" No output device
-! [PLATFORM=ia32|PLATFORM=amd64|PLATFORM=sparc64|PLATFORM=ppc32|(PLATFORM=ia64&MACHINE=i460GX)|(PLATFORM=mips32&(MACHINE=msim|MACHINE=bmalta|MACHINE=lmalta))] CONFIG_HID_OUT (choice)
+! [PLATFORM=ia32|PLATFORM=amd64|PLATFORM=aarch64|PLATFORM=sparc64|PLATFORM=ppc32|(PLATFORM=ia64&MACHINE=i460GX)|(PLATFORM=mips32&(MACHINE=msim|MACHINE=bmalta|MACHINE=lmalta))] CONFIG_HID_OUT (choice)
 
 % PC keyboard support
 ! [(CONFIG_HID_IN=generic|CONFIG_HID_IN=keyboard)&(PLATFORM=ia32|PLATFORM=amd64)] CONFIG_PC_KBD (y/n)
@@ -563,7 +576,7 @@
 ! [CONFIG_HID_OUT=generic&PLATFORM=ia64&MACHINE=i460GX] CONFIG_EGA (y/n)
 
 % Framebuffer support
-! [CONFIG_HID_OUT=generic&(PLATFORM=ia32|PLATFORM=amd64|PLATFORM=ppc32)] CONFIG_FB (y/n)
+! [CONFIG_HID_OUT=generic&(PLATFORM=ia32|PLATFORM=amd64|PLATFORM=aarch64|PLATFORM=ppc32)] CONFIG_FB (y/n)
 
 % Framebuffer support
 ! [(CONFIG_HID_OUT=generic|CONFIG_HID_OUT=monitor)&PLATFORM=arm32] CONFIG_FB (y/n)
@@ -601,7 +614,7 @@
 
 % Dynamic linking support
 ! [PLATFORM=ia32] CONFIG_RTLD (n/y)
-! [PLATFORM=abs32le|PLATFORM=amd64|PLATFORM=arm32|PLATFORM=ia64|PLATFORM=mips32|PLATFORM=ppc32|PLATFORM=sparc64] CONFIG_RTLD (n)
+! [PLATFORM=abs32le|PLATFORM=amd64|PLATFORM=aarch64|PLATFORM=arm32|PLATFORM=ia64|PLATFORM=mips32|PLATFORM=ppc32|PLATFORM=sparc64] CONFIG_RTLD (n)
 
 % Build shared libraries
 ! [CONFIG_RTLD=y] CONFIG_BUILD_SHARED_LIBS (n/y)
@@ -653,6 +666,10 @@
 @ "pc" GRUB for PC
 @ "efi" GRUB for UEFI
 ! [PLATFORM=ia32|PLATFORM=amd64] GRUB_ARCH (choice)
+
+% GRUB boot loader architecture
+@ "efi" GRUB for UEFI
+! [PLATFORM=aarch64] GRUB_ARCH (choice)
 
 % uImage OS type
 @ "2" NetBSD stage 2 boot loader
