--- a/boot/arch/amd64/Makefile.inc
+++ b/boot/arch/amd64/Makefile.inc
@@ -66,6 +66,7 @@ RD_APPS_ESSENTIAL += \
 	$(USPACE_PATH)/app/mixerctl/mixerctl \
 	$(USPACE_PATH)/app/wavplay/wavplay
 
-BOOT_OUTPUT = $(ROOT_PATH)/image.iso
+BOOT_OUTPUT =
+POST_OUTPUT = $(ROOT_PATH)/image.iso
 PREBUILD = $(INITRD).img
 BUILD = Makefile.grub
