--- a/boot/Makefile.grub
+++ b/boot/Makefile.grub
@@ -64,9 +64,15 @@ ifeq ($(GRUB_ARCH),efi)
 	gunzip $(IMAGE)
 endif
 	
+ifeq ($(GRUB_LOADER),multiboot)
 	for module in $(COMPONENTS) ; do \
 		cp "$$module" $(BOOT)/ ; \
 	done
+endif
+ifeq ($(GRUB_LOADER),linux)
+	cp "$(BOOT_OUTPUT)" $(BOOT)/
+	cp "$(INITRD).img" $(BOOT)/
+endif
 	
 	echo "set default=0" > $(BOOT_CONFIG)
 	echo "set timeout=10" >> $(BOOT_CONFIG)
@@ -83,6 +89,7 @@ endif
 	echo "" >> $(BOOT_CONFIG)
 	
 	echo "menuentry 'HelenOS $(RELEASE)' --class helenos --class os {" >> $(BOOT_CONFIG)
+ifeq ($(GRUB_LOADER),multiboot)
 	for module in $(MODULES) ; do \
 		echo "	echo 'Loading $$module'" >> $(BOOT_CONFIG) ; \
 		if [ "$$module" = "kernel.bin" ] ; then \
@@ -91,6 +98,14 @@ endif
 			echo "	$(MODULE_CMD) /boot/$$module /boot/$$module" >> $(BOOT_CONFIG) ; \
 		fi \
 	done
+endif
+ifeq ($(GRUB_LOADER),linux)
+	echo "	echo 'Loading $(BOOT_OUTPUT)'" >> $(BOOT_CONFIG)
+	echo "	linux /boot/$(BOOT_OUTPUT)" >> $(BOOT_CONFIG)
+	echo "	echo 'Loading $(INITRD).img'" >> $(BOOT_CONFIG)
+	echo "	initrd /boot/$(INITRD).img" >> $(BOOT_CONFIG)
+	echo "	boot" >> $(BOOT_CONFIG)
+endif
 	echo "}" >> $(BOOT_CONFIG)
 
 clean:
