--- a/boot/Makefile
+++ b/boot/Makefile
@@ -51,6 +51,14 @@ ifeq ($(RDFMT),ext4fs)
 endif
 
 build_dist: clean_dist
+	mkdir -p "$(DIST_PATH)/cfg/net"
+	mkdir -p "$(DIST_PATH)/inc"
+	mkdir -p "$(DIST_PATH)/lib"
+	mkdir -p "$(DIST_PATH)/loc"
+	mkdir -p "$(DIST_PATH)/log"
+	mkdir -p "$(DIST_PATH)/test"
+	mkdir -p "$(DIST_PATH)/tmp"
+
 	mkdir -p "$(DIST_PATH)/srv/"
 	for file in $(RD_SRVS) ; do \
 		cp "$$file" "$(DIST_PATH)/srv/" ; \
