Add initial GICv2 bits

--- a/HelenOS.config
+++ b/HelenOS.config
@@ -548,6 +548,9 @@
 % Support for BCM2835 mailbox
 ! [PLATFORM=arm32&MACHINE=raspberrypi] CONFIG_BCM2835_MAILBOX (y/n)
 
+% Support for ARM GICv2
+! [PLATFORM=arm64] CONFIG_GICV2 (y)
+
 % Support for i8042 controller
 ! [CONFIG_PC_KBD=y] CONFIG_I8042 (y)
 
