--- a/kernel/arch/arm64/Makefile.inc
+++ b/kernel/arch/arm64/Makefile.inc
@@ -46,6 +46,7 @@ ARCH_SOURCES = \
 	arch/$(KARCH)/src/exception.c \
 	arch/$(KARCH)/src/fpu_context.c \
 	arch/$(KARCH)/src/interrupt.c \
+	arch/$(KARCH)/src/machine_func.c \
 	arch/$(KARCH)/src/mm/as.c \
 	arch/$(KARCH)/src/mm/frame.c \
 	arch/$(KARCH)/src/mm/km.c \
@@ -55,6 +56,10 @@ ARCH_SOURCES = \
 	arch/$(KARCH)/src/smp/smp.c \
 	arch/$(KARCH)/src/smp/smp_call.c \
 	arch/$(KARCH)/src/start.S
+
+ifeq ($(MACHINE),virt)
+	ARCH_SOURCES += arch/$(KARCH)/src/mach/virt/virt.c
+endif
 
 ARCH_AUTOGENS_AG = \
 	arch/$(KARCH)/include/arch/istate_struct.ag \
