Add ARM64 QEMU virt platform driver

--- a/.gitignore
+++ b/.gitignore
@@ -377,6 +377,7 @@ kernel/arch/arm64/include/arch/context_struct.h
 kernel/arch/arm64/include/arch/istate_struct.h
 uspace/drv/char/pl011/pl011
 uspace/drv/char/sttykbd/sttykbd
+uspace/drv/platform/arm64virt/arm64virt
 uspace/lib/c/arch/arm64/_link-dlexe.ld
 uspace/lib/c/arch/arm64/_link-loader.ld
 uspace/lib/c/arch/arm64/_link-shlib.ld
