Wire drv/platform/arm64virt and srv/hw/irc/gicv2 in the build for ARM64

--- a/uspace/Makefile
+++ b/uspace/Makefile
@@ -210,6 +210,12 @@ ifeq ($(UARCH),arm32)
 		srv/hw/irc/icp-ic
 endif
 
+ifeq ($(UARCH),arm64)
+	DIRS += \
+		drv/platform/arm64virt \
+		srv/hw/irc/gicv2
+endif
+
 ## System libraries
 #
 
