--- a/uspace/Makefile
+++ b/uspace/Makefile
@@ -173,6 +173,7 @@ DIRS = \
 	drv/hid/usbhid \
 	drv/hid/xtkbd \
 	drv/intctl/apic \
+	drv/intctl/gicv2 \
 	drv/intctl/i8259 \
 	drv/intctl/icp-ic \
 	drv/intctl/obio \
@@ -202,8 +203,7 @@ endif
 
 ifeq ($(UARCH),arm64)
 	DIRS += \
-		drv/platform/arm64virt \
-		srv/hw/irc/gicv2
+		drv/platform/arm64virt
 endif
 
 ## Dynamic linking tests
