--- a/uspace/lib/c/arch/arm64/Makefile.common
+++ b/uspace/lib/c/arch/arm64/Makefile.common
@@ -26,7 +26,9 @@
 # THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-GCC_CFLAGS += -fno-omit-frame-pointer
+COMMON_CFLAGS += -fno-omit-frame-pointer
+
+LDFLAGS += -Wl,--gc-sections
 
 ENDIANESS = LE
 
