--- a/boot/arch/arm64/Makefile.inc
+++ b/boot/arch/arm64/Makefile.inc
@@ -44,13 +44,14 @@ ENDIANESS = LE
 # rebase the boot file using the .reloc information in the image if it cannot
 # load the binary at its preferred address. The ARM64 port does not provide this
 # information in its PE file (that would require manually creating it) but
-# instead compiles the boot code with the -fpic option.
+# instead the boot code is compiled with the -fpic option and the bootloader
+# relocates itself at runtime.
 #
 # N.B. The UEFI guarantees for AArch64 that during boot time the primary
 # processor is in the execution mode that has unaligned access enabled. The
 # -mstrict-align option is therefore not needed.
-EXTRA_CFLAGS = -fpic
-RAW_OBJECTS_CHECK = arch/$(BARCH)/check-pic.sh $(OBJDUMP)
+EXTRA_CFLAGS = -fpic -fvisibility=hidden
+EXTRA_LDFLAGS = -Wl,-shared
 
 ifeq ($(MACHINE), virt)
 	RD_DRVS_ESSENTIAL += \
@@ -62,6 +63,7 @@ endif
 SOURCES = \
 	arch/$(BARCH)/src/asm.S \
 	arch/$(BARCH)/src/main.c \
+	arch/$(BARCH)/src/relocate.c \
 	$(COMPS).o \
 	genarch/src/efi.c \
 	generic/src/gzip.c \
